Date	Added

2007/02/08
	* Since the mysql ping interval is now autoconfigured, removed
	the connection_ping_interval config setting in inter_athena.conf
2007/02/01
	* Improved a bit the description of the mvp item get time config settings.
2007/01/29
	* Collapsed config settings produce_item_name_input,
	  produce_potion_name_input, making_arrow_name_input, holywater_name_input,
	  cdp_name_input into a single config produce_item_name_input which uses
	  bitmasks to determine what it affects. See battle/item.conf for details.
	* Updated arrow_decrement to have 3 possible values: Disabled, Enabled, and
	  Enabled + Autoguess (gives arrow consumption as appropiate to
	  plagiarized/acquired skills). eA previously had a hardcoded '2' setting,
	  now it's 1 by default as it should be. [Skotlex]
2007/01/28
	* Fixed the description of @summon
	* Fixed @nuke's position (I edited the wrong file by accident)
2007/01/27
	* Atcommand fixup [ultramage]
	- removed atcommands @w, @server_date/time, @red, @happyhappyjoyjoy, @shuffle
	- synced gm level of @jailfor, @charjailtime, @npcmove, @chardropall,
	  @charstoreall, @send, @mute, @changelook, @exp and @nuke
	- added conf entries for @whozeny, @kamic, @tonpc, @petid, @identify, @adopt,
	  @trade, @changelook, @send
	- reorganized the atcommands a bit
2007/01/26
	* Added battle config hom_rename (homunc.txt) to enable renaming the
	  homunculus multiple times. Defaults to no.
2007/01/22
	* Moved the homunculus setting from pet.conf to homunc.conf [Skotlex]
2007/01/12
	* Updated the information about ip rules and DDoS protection in 
	  packet_athena.conf and commented out the line "allow: all" so 
	  connections are rejected when a DDoS is detected. [FlavioJS]
2007/01/08
	* Added the console plugin to plugin_athena.conf commented out. [FlavioJS]
2007/01/05
	* Updated noicewall mapflags (to allow them in cities), thanks to Au{R}oN
2007/01/03
	* Changed friend_auto_add to 'yes' (closer to official, except for one detail)